// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form Components Snapshots > Button Component > should match snapshot for danger variant 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 font-semibold text-sm transition-all active:scale-95 bg-error text-white hover:bg-red-600 px-4 py-2.5 h-10  "
  type="button"
>
  <span>
    Delete
  </span>
</button>
`;

exports[`Form Components Snapshots > Button Component > should match snapshot for disabled state 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 font-semibold text-sm transition-all active:scale-95 bg-brand text-white hover:bg-brand-dark px-4 py-2.5 h-10 opacity-50 cursor-not-allowed "
  disabled=""
  type="button"
>
  <span>
    Disabled
  </span>
</button>
`;

exports[`Form Components Snapshots > Button Component > should match snapshot for ghost variant 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 font-semibold text-sm transition-all active:scale-95 bg-transparent text-t-secondary hover:bg-gray-100 px-4 py-2.5 h-10  "
  type="button"
>
  <span>
    Ghost
  </span>
</button>
`;

exports[`Form Components Snapshots > Button Component > should match snapshot for large size 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 font-semibold text-sm transition-all active:scale-95 bg-brand text-white hover:bg-brand-dark px-5 py-3 h-12  "
  type="button"
>
  <span>
    Large
  </span>
</button>
`;

exports[`Form Components Snapshots > Button Component > should match snapshot for loading state 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 font-semibold text-sm transition-all active:scale-95 bg-brand text-white hover:bg-brand-dark px-4 py-2.5 h-10 opacity-50 cursor-not-allowed "
  disabled=""
  type="button"
>
  <span
    class="w-4 h-4 border-2 border-current border-t-transparent rounded-full animate-spin"
  />
  <span>
    Loading
  </span>
</button>
`;

exports[`Form Components Snapshots > Button Component > should match snapshot for primary variant 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 font-semibold text-sm transition-all active:scale-95 bg-brand text-white hover:bg-brand-dark px-4 py-2.5 h-10  "
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;

exports[`Form Components Snapshots > Button Component > should match snapshot for secondary variant 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 font-semibold text-sm transition-all active:scale-95 bg-white text-t-primary border border-border hover:bg-gray-50 px-4 py-2.5 h-10  "
  type="button"
>
  <span>
    Secondary
  </span>
</button>
`;

exports[`Form Components Snapshots > Button Component > should match snapshot for small size 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 font-semibold text-sm transition-all active:scale-95 bg-brand text-white hover:bg-brand-dark px-3 py-2 h-9 text-xs  "
  type="button"
>
  <span>
    Small
  </span>
</button>
`;

exports[`Form Components Snapshots > Input Component > should match snapshot for default input 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <input
    class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none transition-colors border-border focus:border-brand "
    placeholder="Enter text"
    type="text"
  />
</div>
`;

exports[`Form Components Snapshots > Input Component > should match snapshot for disabled input 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Username
  </label>
  <input
    class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none transition-colors border-border focus:border-brand bg-gray-50 text-t-muted cursor-not-allowed"
    disabled=""
    placeholder="Enter username"
    type="text"
  />
</div>
`;

exports[`Form Components Snapshots > Input Component > should match snapshot for input with error 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Email
  </label>
  <input
    class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none transition-colors border-error focus:border-error "
    placeholder="Enter email"
    type="text"
  />
  <span
    class="text-xs text-error"
  >
    Invalid email
  </span>
</div>
`;

exports[`Form Components Snapshots > Input Component > should match snapshot for input with hint 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Password
  </label>
  <input
    class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none transition-colors border-border focus:border-brand "
    placeholder="Enter password"
    type="text"
  />
  <span
    class="text-xs text-t-muted"
  >
    Must be at least 8 characters
  </span>
</div>
`;

exports[`Form Components Snapshots > Input Component > should match snapshot for input with label 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Email
  </label>
  <input
    class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none transition-colors border-border focus:border-brand "
    placeholder="Enter email"
    type="text"
  />
</div>
`;

exports[`Form Components Snapshots > Input Component > should match snapshot for password input 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Password
  </label>
  <input
    class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none transition-colors border-border focus:border-brand "
    placeholder="Enter password"
    type="password"
  />
</div>
`;

exports[`Form Components Snapshots > Input Component > should match snapshot for required input 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Name
    <span
      class="text-error ml-0.5"
    >
      *
    </span>
  </label>
  <input
    class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none transition-colors border-border focus:border-brand "
    placeholder="Enter name"
    type="text"
  />
</div>
`;

exports[`Form Components Snapshots > Select Component > should match snapshot for default select 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <div
    class="relative"
  >
    <select
      class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none appearance-none pr-10 transition-colors border-border focus:border-brand "
    >
      <option
        disabled=""
        value=""
      >
        Select...
      </option>
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        value="option3"
      >
        Option 3
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down absolute right-3 top-1/2 -translate-y-1/2 text-t-muted pointer-events-none"
      fill="none"
      height="18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </div>
</div>
`;

exports[`Form Components Snapshots > Select Component > should match snapshot for disabled select 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Priority
  </label>
  <div
    class="relative"
  >
    <select
      class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none appearance-none pr-10 transition-colors border-border focus:border-brand bg-gray-50 text-t-muted cursor-not-allowed"
      disabled=""
    >
      <option
        disabled=""
        value=""
      >
        Select...
      </option>
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        value="option3"
      >
        Option 3
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down absolute right-3 top-1/2 -translate-y-1/2 text-t-muted pointer-events-none"
      fill="none"
      height="18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </div>
</div>
`;

exports[`Form Components Snapshots > Select Component > should match snapshot for required select 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Category
    <span
      class="text-error ml-0.5"
    >
      *
    </span>
  </label>
  <div
    class="relative"
  >
    <select
      class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none appearance-none pr-10 transition-colors border-border focus:border-brand "
    >
      <option
        disabled=""
        value=""
      >
        Select...
      </option>
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        value="option3"
      >
        Option 3
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down absolute right-3 top-1/2 -translate-y-1/2 text-t-muted pointer-events-none"
      fill="none"
      height="18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </div>
</div>
`;

exports[`Form Components Snapshots > Select Component > should match snapshot for select with custom placeholder 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Type
  </label>
  <div
    class="relative"
  >
    <select
      class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none appearance-none pr-10 transition-colors border-border focus:border-brand "
    >
      <option
        disabled=""
        value=""
      >
        Select a type...
      </option>
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        value="option3"
      >
        Option 3
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down absolute right-3 top-1/2 -translate-y-1/2 text-t-muted pointer-events-none"
      fill="none"
      height="18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </div>
</div>
`;

exports[`Form Components Snapshots > Select Component > should match snapshot for select with error 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Status
  </label>
  <div
    class="relative"
  >
    <select
      class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none appearance-none pr-10 transition-colors border-error "
    >
      <option
        disabled=""
        value=""
      >
        Select...
      </option>
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        value="option3"
      >
        Option 3
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down absolute right-3 top-1/2 -translate-y-1/2 text-t-muted pointer-events-none"
      fill="none"
      height="18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </div>
  <span
    class="text-xs text-error"
  >
    Please select a status
  </span>
</div>
`;

exports[`Form Components Snapshots > Select Component > should match snapshot for select with label 1`] = `
<div
  class="flex flex-col gap-1.5 "
>
  <label
    class="text-xs font-medium text-t-secondary uppercase tracking-wide"
  >
    Choose option
  </label>
  <div
    class="relative"
  >
    <select
      class="w-full px-3 py-2.5 text-sm bg-white border rounded-lg outline-none appearance-none pr-10 transition-colors border-border focus:border-brand "
    >
      <option
        disabled=""
        value=""
      >
        Select...
      </option>
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        value="option3"
      >
        Option 3
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down absolute right-3 top-1/2 -translate-y-1/2 text-t-muted pointer-events-none"
      fill="none"
      height="18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </div>
</div>
`;

exports[`Form Components Snapshots > Toggle Component > should match snapshot for checked toggle 1`] = `
<label
  class="inline-flex items-center gap-3 cursor-pointer  "
>
  <input
    checked=""
    class="sr-only peer"
    type="checkbox"
  />
  <div
    class="relative w-10 h-5 bg-border-medium rounded-full peer-checked:bg-brand transition-colors after:content-[''] after:absolute after:top-0.5 after:left-0.5 after:bg-white after:rounded-full after:w-4 after:h-4 after:transition-transform peer-checked:after:translate-x-5"
  />
  <span
    class="text-sm text-t-primary"
  >
    Enable notifications
  </span>
</label>
`;

exports[`Form Components Snapshots > Toggle Component > should match snapshot for disabled toggle 1`] = `
<label
  class="inline-flex items-center gap-3 cursor-pointer opacity-50 cursor-not-allowed "
>
  <input
    class="sr-only peer"
    disabled=""
    type="checkbox"
  />
  <div
    class="relative w-10 h-5 bg-border-medium rounded-full peer-checked:bg-brand transition-colors after:content-[''] after:absolute after:top-0.5 after:left-0.5 after:bg-white after:rounded-full after:w-4 after:h-4 after:transition-transform peer-checked:after:translate-x-5"
  />
  <span
    class="text-sm text-t-primary"
  >
    Enable notifications
  </span>
</label>
`;

exports[`Form Components Snapshots > Toggle Component > should match snapshot for toggle without label 1`] = `
<label
  class="inline-flex items-center gap-3 cursor-pointer  "
>
  <input
    class="sr-only peer"
    type="checkbox"
  />
  <div
    class="relative w-10 h-5 bg-border-medium rounded-full peer-checked:bg-brand transition-colors after:content-[''] after:absolute after:top-0.5 after:left-0.5 after:bg-white after:rounded-full after:w-4 after:h-4 after:transition-transform peer-checked:after:translate-x-5"
  />
</label>
`;

exports[`Form Components Snapshots > Toggle Component > should match snapshot for unchecked toggle 1`] = `
<label
  class="inline-flex items-center gap-3 cursor-pointer  "
>
  <input
    class="sr-only peer"
    type="checkbox"
  />
  <div
    class="relative w-10 h-5 bg-border-medium rounded-full peer-checked:bg-brand transition-colors after:content-[''] after:absolute after:top-0.5 after:left-0.5 after:bg-white after:rounded-full after:w-4 after:h-4 after:transition-transform peer-checked:after:translate-x-5"
  />
  <span
    class="text-sm text-t-primary"
  >
    Enable notifications
  </span>
</label>
`;
